--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.2",
     "axios": "^0.26.1",
     "install": "^0.13.0",
     "npm": "^8.7.0",
@@ -18,6 +22,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "start": "^5.1.0",
+    "typescript": "^4.6.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
