--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "axios": "^0.26.1",
+    "flickity": "^3.0.0",
     "install": "^0.13.0",
     "npm": "^8.7.0",
     "react": "^18.0.0",
+    "react-alice-carousel": "^2.6.0",
     "react-dom": "^18.0.0",
+    "react-flickity-component": "^3.6.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "start": "^5.1.0",
+    "swiper": "^8.1.4",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
@@ -49,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
