--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.0.0",
     "react-alice-carousel": "^2.6.0",
     "react-dom": "^18.0.0",
+    "react-draggable": "^4.4.5",
     "react-flickity-component": "^3.6.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
