--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "axios": "^0.26.1",
     "flickity": "^3.0.0",
     "install": "^0.13.0",
+    "material-ui-color-picker": "^3.5.1",
     "npm": "^8.7.0",
     "react": "^18.0.0",
     "react-alice-carousel": "^2.6.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.5",
     "react-flickity-component": "^3.6.2",
+    "react-rnd": "^10.3.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "start": "^5.1.0",
