add shopping starters

--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "axios": "^0.26.1",
+    "bootstrap": "^5.2.3",
     "flickity": "^3.0.0",
     "install": "^0.13.0",
     "material-ui-color-picker": "^3.5.1",
     "npm": "^8.7.0",
     "react": "^18.0.0",
     "react-alice-carousel": "^2.6.0",
+    "react-bootstrap": "^2.7.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.5",
