--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dnd-kit/core": "^6.0.7",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
@@ -20,11 +21,11 @@
     "install": "^0.13.0",
     "material-ui-color-picker": "^3.5.1",
     "npm": "^8.7.0",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-alice-carousel": "^2.6.0",
     "react-bootstrap": "^2.7.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-flickity-component": "^3.6.2",
     "react-rnd": "^10.3.7",
